# QGo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
qgo/: __init__.py  __main__.py  config.py  main.py  models.py
qgo/agents/: __init__.py  base_agent.py  orchestrator.py  specialist_agents.py
qgo/coders/: __init__.py  architect_coder.py  base_coder.py  editblock_coder.py  udiff_coder.py  whole_coder.py
qgo/llm/: __init__.py  base.py  litellm_provider.py  model_info.py  streaming.py
qgo/repo/: __init__.py  file_watcher.py  git_repo.py  repo_map.py
qgo/ui/: __init__.py  commands.py  repl.py  terminal.py
qgo/utils/: __init__.py  file_utils.py  token_counter.py  web_scraper.py
tests/: __init__.py  test_agents.py  test_config.py  test_editblock_coder.py  test_file_utils.py  test_llm.py  test_repo_map.py
