[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgo"
version = "0.1.0"
description = "QGo — The most advanced AI coding assistant. More powerful than Cursor."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "QGo Contributors"}]
keywords = ["ai", "coding", "assistant", "llm", "gpt", "claude", "copilot", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "gitpython>=3.1",
    "litellm>=1.30",
    "tiktoken>=0.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "watchdog>=4.0",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "pygments>=2.17",
    "python-dotenv>=1.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
voice = ["SpeechRecognition>=3.10", "pyaudio>=0.2"]
dev = ["pytest>=7", "pytest-cov", "black>=23", "ruff>=0.1", "mypy>=1.0"]

[project.scripts]
qgo = "qgo.main:cli"

[project.urls]
Homepage = "https://github.com/Rahulchaube1/QGo"
Repository = "https://github.com/Rahulchaube1/QGo"
"Bug Tracker" = "https://github.com/Rahulchaube1/QGo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["qgo*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
